--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<head>
     <!-- Basic -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">   
@@ -9,17 +9,62 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
      <!-- Site Metas -->
-    <title>TECHNOBLIZ IT SERVICES</title>  
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <meta name="author" content="">
+	<title>Technobliz IT Services | Web & App Development, SEO & IT Consulting</title>
+	<meta name="title" content="Technobliz IT Services | Web & App Development, SEO & IT Consulting">
+	<meta name="description" content="Technobliz IT Services is your trusted partner for web & app development, IT consulting, SEO, and digital solutions. Delivering quality technology services for modern businesses.">
+	<meta name="keywords" content="Technobliz, IT services, web development, SEO, app development, IT consulting, software development India, digital transformation, tech company" />
+	<meta name="author" content="Technobliz IT Services" />
+	<meta name="robots" content="index, follow" />
+	<meta name="language" content="English" />
+	<meta name="distribution" content="global" />
+	<meta name="rating" content="general" />
+	<meta name="revisit-after" content="7 days" />
+
+    <!-- Canonical Link -->
+  	<link rel="canonical" href="https://technobliz.com/" />
+
+	 <!-- Open Graph Meta Tags -->
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://technobliz.com/" />
+	<meta property="og:title" content="Technobliz IT Services | Web & App Development, SEO & Consulting" />
+	<meta property="og:description" content="Trusted IT service provider offering top-quality web/app development, IT consulting, and SEO." />
+	<meta property="og:image" content="https://technobliz.com/images/og-image.jpg" />
+
+	  <!-- Business Contact Meta -->
+	<meta name="geo.region" content="IN-MH" />
+	<meta name="geo.placename" content="Maharashtra" />
+	<meta name="geo.position" content="21.455896, 80.206914" />
+	<meta name="ICBM" content="21.455896, 80.206914" />
+
+	  <!-- JSON-LD Structured Data -->
+	<script type="application/ld+json">
+	{
+		"@context": "https://schema.org",
+		"@type": "Organization",
+		"name": "Technobliz IT Services",
+		"url": "https://technobliz.com/",
+		"logo": "https://technobliz.com/images/logo.png",
+		"sameAs": [
+		"https://www.facebook.com/technobliz",
+		"https://www.instagram.com/technobliz",
+		"https://www.linkedin.com/company/technobliz"
+		],
+		"contactPoint": {
+		"@type": "ContactPoint",
+		"telephone": "+91-8698105221",
+		"contactType": "customer support",
+		"areaServed": "IN",
+		"availableLanguage": "English"
+		}
+	}
+	</script>
+
 
     <!-- Site Icons -->
     <link rel="shortcut icon" href="../images/images/favicon.ico" type="image/x-icon" />
 	<link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
-    rel="stylesheet"
-/>
+    rel="stylesheet"/>
     <link rel="apple-touch-icon" href="../images/images/apple-touch-icon.png">
      <link rel="stylesheet" href="../stylesheet/css/flaticon.css">
     <!-- Bootstrap CSS -->
@@ -38,17 +83,18 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-<style>
-	/* sc-component-id: featureBlockstyle__FeatureBlockWrapper-sc-1ys2ybj-0 */
-.glPaZX.icon_left{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;} .glPaZX.icon_left .icon__wrapper{-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;} .glPaZX.icon_right{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:row-reverse;-ms-flex-direction:row-reverse;flex-direction:row-reverse;} .glPaZX.icon_right .content__wrapper{text-align:center;} .glPaZX.icon_right .icon__wrapper{-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;}
+	<style>
+		/* sc-component-id: featureBlockstyle__FeatureBlockWrapper-sc-1ys2ybj-0 */
+	.glPaZX.icon_left{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;} .glPaZX.icon_left .icon__wrapper{-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;} .glPaZX.icon_right{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:row-reverse;-ms-flex-direction:row-reverse;flex-direction:row-reverse;} .glPaZX.icon_right .content__wrapper{text-align:center;} .glPaZX.icon_right .icon__wrapper{-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;}
 
-/* sc-component-id: experiencestyle__BannerWrapper-sc-1p5tawz-0 */
-.JFRVf{padding:70px 0 0;min-height:95vh;overflow:hidden;background-color:#FAFBFF;} @media only screen and (min-width:1201px) and (max-width:1440px){.JFRVf{min-height:100vh;}} @media only screen and (max-width:480px){.JFRVf{padding-top:20px;}} .JFRVf > div.container{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:justify;-webkit-justify-content:space-between;-ms-flex-pack:justify;justify-content:space-between;min-height:calc(802px - 100px);} @media only screen and (min-width:1201px) and (max-width:1440px){.JFRVf > div.container{min-height:calc(100vh - 100px);}} @media only screen and (max-width:480px){.JFRVf > div.container{-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap;}} .JFRVf h1{font-family:'Roboto',sans-serif;} .JFRVf hr{margin-left:80px;margin-right:80px;}
+	/* sc-component-id: experiencestyle__BannerWrapper-sc-1p5tawz-0 */
+	.JFRVf{padding:70px 0 0;min-height:95vh;overflow:hidden;background-color:#FAFBFF;} @media only screen and (min-width:1201px) and (max-width:1440px){.JFRVf{min-height:100vh;}} @media only screen and (max-width:480px){.JFRVf{padding-top:20px;}} .JFRVf > div.container{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:justify;-webkit-justify-content:space-between;-ms-flex-pack:justify;justify-content:space-between;min-height:calc(802px - 100px);} @media only screen and (min-width:1201px) and (max-width:1440px){.JFRVf > div.container{min-height:calc(100vh - 100px);}} @media only screen and (max-width:480px){.JFRVf > div.container{-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap;}} .JFRVf h1{font-family:'Roboto',sans-serif;} .JFRVf hr{margin-left:80px;margin-right:80px;}
 
-/* sc-component-id: experiencestyle__FeatureWrapper-sc-1p5tawz-1 */
-.bysKCb{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap;-webkit-box-pack:justify;-webkit-justify-content:space-between;-ms-flex-pack:justify;justify-content:space-between;padding:25px;background-color:#FAFBFF;} .bysKCb > div{width:calc(100% / 8 - 30px);margin:10px 0 25px;} @media only screen and (max-width:1366px){.bysKCb > div{width:calc(100% / 8 - 20px);}} @media only screen and (max-width:991px){.bysKCb > div{width:calc(100% / 6 - 30px);}} @media only screen and (max-width:767px){.bysKCb > div{width:calc(100% / 4 - 15px);}} @media only screen and (max-width:480px){.bysKCb > div{width:calc(100% / 2 - 15px);margin-top:15px;}} .bysKCb .feature__block{-webkit-align-items:flex-start;-webkit-box-align:flex-start;-ms-flex-align:flex-start;align-items:flex-start;} @media only screen and (max-width:767px){.bysKCb .feature__block{-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;text-align:center;}} .bysKCb .feature__block .icon__wrapper{position:relative;left:10px;text-align:-webkit-center;} .bysKCb .feature__block .icon__wrapper img{height:50px;} @media only screen and (max-width:1366px){.bysKCb .feature__block .icon__wrapper img{height:40px;}} @media only screen and (max-width:600px){.bysKCb .feature__block .icon__wrapper{left:0px;}.bysKCb .feature__block .icon__wrapper img{height:35px;}} .bysKCb .feature__block .icon__wrapper i{opacity:0;visibility:hidden;position:absolute;color:var(--color);-webkit-transition:all 0.5s cubic-bezier(0.75,-0.5,0,1.75);transition:all 0.5s cubic-bezier(0.75,-0.5,0,1.75);} .bysKCb .feature__block .icon__wrapper i.plus{top:0;left:0;-webkit-transform:translate(20px,20px) scale(0.1) rotate(-180deg);-ms-transform:translate(20px,20px) scale(0.1) rotate(-180deg);transform:translate(20px,20px) scale(0.1) rotate(-180deg);} .bysKCb .feature__block .icon__wrapper i.circle{top:0;right:0;-webkit-transform:translate(-20px,20px) scale(0.1) rotate(-180deg);-ms-transform:translate(-20px,20px) scale(0.1) rotate(-180deg);transform:translate(-20px,20px) scale(0.1) rotate(-180deg);} .bysKCb .feature__block .icon__wrapper i.star{bottom:-5px;left:calc(50% - 8px);-webkit-transform:translate(0,-20px) scale(0.1) rotate(-180deg);-ms-transform:translate(0,-20px) scale(0.1) rotate(-180deg);transform:translate(0,-20px) scale(0.1) rotate(-180deg);} .bysKCb .feature__block .content__wrapper{padding-left:21px;} @media only screen and (max-width:1366px){.bysKCb .feature__block .content__wrapper{padding-left:20px;}} @media only screen and (max-width:767px){.bysKCb .feature__block .content__wrapper{padding:20px 0 0;}} .bysKCb .feature__block .content__wrapper h3{font-size:17px;line-height:30px;font-weight:500;} @media only screen and (max-width:1366px){.bysKCb .feature__block .content__wrapper h3{font-size:15px;margin-bottom:5px;}} @media only screen and (max-width:600px){.bysKCb .feature__block .content__wrapper h3{margin-top:-10px;}} .bysKCb .feature__block .content__wrapper p{color:#43414e;font-size:15px;line-height:28px;margin:0;} .bysKCb .feature__block:hover .icon__wrapper i{opacity:1;visibility:visible;} .bysKCb .feature__block:hover .icon__wrapper i.plus{-webkit-transform:translate(-4px,-4px) scale(1) rotate(180deg);-ms-transform:translate(-4px,-4px) scale(1) rotate(180deg);transform:translate(-4px,-4px) scale(1) rotate(180deg);} .bysKCb .feature__block:hover .icon__wrapper i.circle{-webkit-transform:translate(4px,-4px) scale(1) rotate(180deg);-ms-transform:translate(4px,-4px) scale(1) rotate(180deg);transform:translate(4px,-4px) scale(1) rotate(180deg);} .bysKCb .feature__block:hover .icon__wrapper i.star{-webkit-transform:translate(0,13px) scale(1) rotate(180deg);-ms-transform:translate(0,13px) scale(1) rotate(180deg);transform:translate(0,13px) scale(1) rotate(180deg);}
-</style>
+	/* sc-component-id: experiencestyle__FeatureWrapper-sc-1p5tawz-1 */
+	.bysKCb{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap;-webkit-box-pack:justify;-webkit-justify-content:space-between;-ms-flex-pack:justify;justify-content:space-between;padding:25px;background-color:#FAFBFF;} .bysKCb > div{width:calc(100% / 8 - 30px);margin:10px 0 25px;} @media only screen and (max-width:1366px){.bysKCb > div{width:calc(100% / 8 - 20px);}} @media only screen and (max-width:991px){.bysKCb > div{width:calc(100% / 6 - 30px);}} @media only screen and (max-width:767px){.bysKCb > div{width:calc(100% / 4 - 15px);}} @media only screen and (max-width:480px){.bysKCb > div{width:calc(100% / 2 - 15px);margin-top:15px;}} .bysKCb .feature__block{-webkit-align-items:flex-start;-webkit-box-align:flex-start;-ms-flex-align:flex-start;align-items:flex-start;} @media only screen and (max-width:767px){.bysKCb .feature__block{-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;text-align:center;}} .bysKCb .feature__block .icon__wrapper{position:relative;left:10px;text-align:-webkit-center;} .bysKCb .feature__block .icon__wrapper img{height:50px;} @media only screen and (max-width:1366px){.bysKCb .feature__block .icon__wrapper img{height:40px;}} @media only screen and (max-width:600px){.bysKCb .feature__block .icon__wrapper{left:0px;}.bysKCb .feature__block .icon__wrapper img{height:35px;}} .bysKCb .feature__block .icon__wrapper i{opacity:0;visibility:hidden;position:absolute;color:var(--color);-webkit-transition:all 0.5s cubic-bezier(0.75,-0.5,0,1.75);transition:all 0.5s cubic-bezier(0.75,-0.5,0,1.75);} .bysKCb .feature__block .icon__wrapper i.plus{top:0;left:0;-webkit-transform:translate(20px,20px) scale(0.1) rotate(-180deg);-ms-transform:translate(20px,20px) scale(0.1) rotate(-180deg);transform:translate(20px,20px) scale(0.1) rotate(-180deg);} .bysKCb .feature__block .icon__wrapper i.circle{top:0;right:0;-webkit-transform:translate(-20px,20px) scale(0.1) rotate(-180deg);-ms-transform:translate(-20px,20px) scale(0.1) rotate(-180deg);transform:translate(-20px,20px) scale(0.1) rotate(-180deg);} .bysKCb .feature__block .icon__wrapper i.star{bottom:-5px;left:calc(50% - 8px);-webkit-transform:translate(0,-20px) scale(0.1) rotate(-180deg);-ms-transform:translate(0,-20px) scale(0.1) rotate(-180deg);transform:translate(0,-20px) scale(0.1) rotate(-180deg);} .bysKCb .feature__block .content__wrapper{padding-left:21px;} @media only screen and (max-width:1366px){.bysKCb .feature__block .content__wrapper{padding-left:20px;}} @media only screen and (max-width:767px){.bysKCb .feature__block .content__wrapper{padding:20px 0 0;}} .bysKCb .feature__block .content__wrapper h3{font-size:17px;line-height:30px;font-weight:500;} @media only screen and (max-width:1366px){.bysKCb .feature__block .content__wrapper h3{font-size:15px;margin-bottom:5px;}} @media only screen and (max-width:600px){.bysKCb .feature__block .content__wrapper h3{margin-top:-10px;}} .bysKCb .feature__block .content__wrapper p{color:#43414e;font-size:15px;line-height:28px;margin:0;} .bysKCb .feature__block:hover .icon__wrapper i{opacity:1;visibility:visible;} .bysKCb .feature__block:hover .icon__wrapper i.plus{-webkit-transform:translate(-4px,-4px) scale(1) rotate(180deg);-ms-transform:translate(-4px,-4px) scale(1) rotate(180deg);transform:translate(-4px,-4px) scale(1) rotate(180deg);} .bysKCb .feature__block:hover .icon__wrapper i.circle{-webkit-transform:translate(4px,-4px) scale(1) rotate(180deg);-ms-transform:translate(4px,-4px) scale(1) rotate(180deg);transform:translate(4px,-4px) scale(1) rotate(180deg);} .bysKCb .feature__block:hover .icon__wrapper i.star{-webkit-transform:translate(0,13px) scale(1) rotate(180deg);-ms-transform:translate(0,13px) scale(1) rotate(180deg);transform:translate(0,13px) scale(1) rotate(180deg);}
+	</style>
 </head>
+
 <body id="page-top" class="politics_version">
 
     <!-- LOADER -->
@@ -1057,7 +1103,154 @@
 			arrow.textContent = '\u25BC'; // Down arrow
 		  }
 		}
-	  </script>
+	</script>
+
+	<script type="application/ld+json">
+		{
+		"@context": "https://schema.org",
+		"@type": "Service",
+		"serviceType": "Web Development",
+		"provider": {
+			"@type": "Organization",
+			"name": "Technobliz IT Services",
+			"url": "https://technobliz.com"
+		},
+		"areaServed": {
+			"@type": "Place",
+			"name": "India"
+		}
+		}
+	</script>
+	<script type="application/ld+json">
+		{
+		"@context": "https://schema.org",
+		"@type": "Service",
+		"serviceType": "App Development",
+		"provider": {
+			"@type": "Organization",
+			"name": "Technobliz IT Services",
+			"url": "https://technobliz.com"
+		},
+		"areaServed": {
+			"@type": "Place",
+			"name": "India"
+		}
+		}
+	</script>
+	<script type="application/ld+json">
+		{
+		"@context": "https://schema.org",
+		"@type": "Service",
+		"serviceType": "Software Development",
+		"provider": {
+			"@type": "Organization",
+			"name": "Technobliz IT Services",
+			"url": "https://technobliz.com"
+		},
+		"areaServed": {
+			"@type": "Place",
+			"name": "India"
+		}
+		}
+	</script>
+	<script type="application/ld+json">
+		{
+		"@context": "https://schema.org",
+		"@type": "Service",
+		"serviceType": "Mobile Application",
+		"provider": {
+			"@type": "Organization",
+			"name": "Technobliz IT Services",
+			"url": "https://technobliz.com"
+		},
+		"areaServed": {
+			"@type": "Place",
+			"name": "India"
+		}
+		}
+	</script>
+	<script type="application/ld+json">
+		{
+		"@context": "https://schema.org",
+		"@type": "Service",
+		"serviceType": "SEO",
+		"provider": {
+			"@type": "Organization",
+			"name": "Technobliz IT Services",
+			"url": "https://technobliz.com"
+		},
+		"areaServed": {
+			"@type": "Place",
+			"name": "India"
+		}
+		}
+	</script>
+	<script type="application/ld+json">
+		{
+		"@context": "https://schema.org",
+		"@type": "Service",
+		"serviceType": "IT Consultant",
+		"provider": {
+			"@type": "Organization",
+			"name": "Technobliz IT Services",
+			"url": "https://technobliz.com"
+		},
+		"areaServed": {
+			"@type": "Place",
+			"name": "India"
+		}
+		}
+	</script>
+	<script type="application/ld+json">
+		{
+		"@context": "https://schema.org",
+		"@type": "Service",
+		"serviceType": "Graphic Design",
+		"provider": {
+			"@type": "Organization",
+			"name": "Technobliz IT Services",
+			"url": "https://technobliz.com"
+		},
+		"areaServed": {
+			"@type": "Place",
+			"name": "India"
+		}
+		}
+	</script>
+	<script type="application/ld+json">
+		{
+		"@context": "https://schema.org",
+		"@type": "Service",
+		"serviceType": "IT Support",
+		"provider": {
+			"@type": "Organization",
+			"name": "Technobliz IT Services",
+			"url": "https://technobliz.com"
+		},
+		"areaServed": {
+			"@type": "Place",
+			"name": "India"
+		}
+		}
+	</script>
+	<script type="application/ld+json">
+		{
+		"@context": "https://schema.org",
+		"@type": "Service",
+		"serviceType": "Web Idea",
+		"provider": {
+			"@type": "Organization",
+			"name": "Technobliz IT Services",
+			"url": "https://technobliz.com"
+		},
+		"areaServed": {
+			"@type": "Place",
+			"name": "India"
+		}
+		}
+	</script>
+
 
 </body>
 </html>
+
