sitemap.xml & robots.txt files added [SEO]

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,10 +25,10 @@
 
 	 <!-- Open Graph Meta Tags -->
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="https://technobliz.com/" />
+	<meta property="og:url" content="https://www.technobliz.com/" />
 	<meta property="og:title" content="Technobliz IT Services | Web & App Development, SEO & Consulting" />
 	<meta property="og:description" content="Trusted IT service provider offering top-quality web/app development, IT consulting, and SEO." />
-	<meta property="og:image" content="https://technobliz.com/images/og-image.jpg" />
+	<meta property="og:image" content="https://www.technobliz.com/images/og-image.jpg" />
 
 	  <!-- Business Contact Meta -->
 	<meta name="geo.region" content="IN-MH" />
@@ -42,8 +42,8 @@
 		"@context": "https://schema.org",
 		"@type": "Organization",
 		"name": "Technobliz IT Services",
-		"url": "https://technobliz.com/",
-		"logo": "https://technobliz.com/images/logo.png",
+		"url": "https://www.technobliz.com/",
+		"logo": "https://www.technobliz.com/images/logo.png",
 		"sameAs": [
 		"https://www.facebook.com/technobliz",
 		"https://www.instagram.com/technobliz",
